    - added 5 (resp. 17) algorithms from the round 2 of the NIST SHA-3 competition:
      - BlueMidnightWish-[224,256,384,512]
      - SIMD-[224,256,384,512]
      - CubeHash-[224,256,384,512]
      - Hamsi-[224,256,384,512]
      - Shabal-[192,224,256,384,512]
    - added CRC-64 (NVM Express 64b CRC)
    - added CRC-32 (Go Koopman) (issue #35)
  - new styles (for I/O)
    - added hash data base (hdb) style which is used by ClamAV's sigtool
  - added strict check mode
    - in strict check mode, all files must pass the verification process, and no files have been added, and no files have been removed
    - added strict check output to the verification summary
    - exit code follows --strict-check
  - added more algorithm investigation info
    - added avalanche effect info to the algorithm info
    - allowed option -q to specify the sequence for the avalanche calculation
    - added also reversed and Koopman representations for the reciprocal polynomial representation if --info is set for a CRC
  - added troubleshooting features
    - added Java Heap Info if --info option has been set
  - improvements on existing features
    - allowed option -e for --string-list

- bug fixes:
  - HMAC does not implement reset() method correctly which means that the same hash of the first calculation is always returned
  - Don't ignore records with same comments in wanted list files.
    While ignoring duplicate file names in check files makes sense for the option --check-file, that setting is
    suboptimal if option --wanted-list is used, because filenames are treated as comments in wanted lists.
  - OOM can occur if producer is much faster than the consumer threads
  - keccak-384 was not recognised as an alias
  - the prompt is "Password: " twice if both options -k password -q password have been specified
    (e.g. "jacksum -q password -a hmac:sha256 -k password"), the prompt for the key is now "Key (echo off): " to
    distinguish the input.