@@ -12,6 +12,7 @@ Jacksum 3.8.0, TBD
       - Shabal-[192,224,256,384,512]
     - added CRC-64 (NVM Express 64b CRC)
     - added CRC-32 (Go Koopman) (issue #35)
+  - added new options: --ignore-hashes, --ignore-sizes, --ignore-timestamps
   - new styles (for I/O)
     - added hash data base (hdb) style which is used by ClamAV's sigtool
   - added strict check mode
